ajout fonctionnalité ami avec gestion de vérification si l'utilisateur est prsent sur soundcloud explorer

--- a/app/views/pages/_tree.html.erb
+++ b/app/views/pages/_tree.html.erb
@@ -239,6 +239,8 @@
                 document.getElementById("tracksNumber").innerHTML='<p>'+d.track_count+'</p>'; 
 
                 $("#followbutton").attr('idToFollow',d.id);
+                $("#addfriendbutton").attr('idToAdd',d.id);
+                
                 var testDeja=false;
                 for(var i=0;i<$myFollowList.length;i++)
                 {
