--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,8 +23,10 @@
 <link rel="stylesheet" href="jquery.mCustomScrollbar.css" />
 <script src="jquery.mCustomScrollbar.concat.min.js"></script>
 <script  src="graph2.js.erb"></script>
-
-
+<script type="text/javascript">
+  $valeur_id_client=<%=current_user.uid%>
+</script>
+ 
 </head>
 
 <div id="buttonShowNav"></div>
