--- a/public/home.css
+++ b/public/home.css
@@ -187,13 +187,20 @@
 	}
 
 	#followbutton{
-		width: 80%;
+		width: 40%;
 		float: right;
 		margin-right: 1px;
 		padding-bottom: 5px;
 		color: black;
 	}
 
+#addfriendbutton{
+		width: 40%;
+		float: right;
+		margin-right: 1px;
+		padding-bottom: 5px;
+		color: black;
+	}
 
 
 
