--- a/public/home.css
+++ b/public/home.css
@@ -22,18 +22,7 @@
 		height: 60%;
 		width: 100%;
 	}
-	#tabs{
-		height: 100%;
-		width: 100%;
-	}
-	#tabs-1{
-		height: 90%;
-		width: 100%;
-	}
-	#tabs-2{
-		height: 90%;
-		width: 100%;
-	}
+	
 
 
 	#value{
@@ -463,28 +452,60 @@ body.loadingTracks #loadTracks {
 	border-color: #EAEAEA;
 }
 
+
 #likes-list
 {
 	width: 100%;
 	margin: 0px;
-	padding: 14px;
-
+	padding-left: 5px;
+	padding-right: 5px;
+/*	padding: 14px;
+*/
 }
 #track-list
 {
 	width: 100%;
 	margin: 0px;
-	padding: 14px;
+		padding-left: 5px;
+		padding-right: 5px;
 
+/*	padding: 14px;
+*/
 }
-#tabs{
+
+#my-friends-list{
+		width: 100%;
+		margin: 0px;
+		padding-left: 5px;
+		padding-right: 5px;
+}
+.friend_li{
+	width: 120px;
+	height: 120px;
+	padding: 1px;
+	float: left;
+	border:solid;
+	border-width:1px;
+	border-color: #EAEAEA;
+}
+.previewFriend{
+	width: 100%;
+	height: 100%;
+}
+
+	
+
+
+
+#tabsWithStyle{
 			white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	height: 100%;
 }
 #mytabs{
 	display: inline-block;
-	height: 41px;
+	height: 75px;
 	position: relative;
 
 	white-space: nowrap;
@@ -493,19 +514,123 @@ body.loadingTracks #loadTracks {
 
 }
 
-#tabs ul
+#tabsWithStyle ul
 {
 	list-style-type: none;
 
 }
-#tabs-1{
-	margin-top: 10px;
-}
-#tabs-2{
 
-	margin-top: 10px;
+.tabFriends {float:right!important;}
+
+#tabsWithStyle{
+		height: 100%;
+		width: 100%;
+	}
+	#tracks{
+		height: 90%;
+		width: 100%;
+	}
+	#likes{
+		height: 90%;
+		width: 100%;
+	}
+	#playlists{
+		height: 90%;
+		width: 100%;
+	}
+	#user-friends{
+		height: 90%;
+		width: 100%;
+	}
+	#my-friends{
+		height: 90%;
+		width: :100%;
+	}
+
+
+
+
+
+.likes-icon { background: url(twitter.png) no-repeat; height: 32px; width: 32px; }
+.playlists-icon { background: url(linkedin.png) no-repeat; height: 32px; width: 32px; }
+.user-friends-icon { background: url(google.png) no-repeat; height: 32px; width: 32px; }
+.my-friends-icon { background: url(wikipedia.png) no-repeat; height: 32px; width: 32px; }
+.tracks-icon { background: url(facebook.png) no-repeat; height: 32px; width: 32px; }
+
+
+.style-tabs {
+    background: none;
+    width: 100%;
 }
-.tabPlaylist {float:right!important;}
+.style-tabs,
+.style-tabs .ui-tabs-nav li a,
+.style-tabs .ui-tabs-nav {
+    padding: 0;
+    height: 80px;
+}
+.style-tabs .ui-tabs-panel {
+/*    padding: 5px;
+*/}
+.style-tabs .ui-widget-header {
+    border: none;
+    background: url(TabMenu.png) repeat;
+    height: 20%;
+    width: 100%;
+}
+.style-tabs .ui-corner-all {
+    -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+}
+.style-tabs .ui-tabs-nav li {
+    position: relative;
+    height: 100%;
+    cursor: pointer;
+    margin: 0;
+    top: 0;
+}
+.style-tabs .ui-widget-header .ui-state-default {
+    background: none;
+    border: none;
+}
+.style-tabs .ui-tabs-nav li.ui-tabs-active,
+.style-tabs .ui-tabs-nav li:hover {
+    background: url(SelectedMiddle.png) ;
+}
+.style-tabs .ui-tabs-nav li .icon {
+    color: #787878;
+    background-position: center 3px;
+    padding-top: 40px;
+    font-weight: bold;
+    font-size: 12px;
+    text-align: center;
+    width: 80px;
+}
+.style-tabs .ui-tabs-nav li.ui-tabs-active .icon,
+.style-tabs .ui-tabs-nav li:hover .icon {
+    color: #414141;
+}
+.style-tabs .ui-tabs-nav li.ui-tabs-active .icon:before,
+.style-tabs .ui-tabs-nav li:hover .icon:before {
+    /*content: url(SelectedSides.png);*/
+    height: 40px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.style-tabs .ui-tabs-nav li.ui-tabs-active .icon:after,
+.style-tabs .ui-tabs-nav li:hover .icon:after {
+    /*content: url(SelectedSides.png);*/
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.style-tabs .ui-tabs-nav li a {
+    outline: none;
+}
+.style-tabs .ui-tabs-nav li.ui-tabs-active a {
+    cursor: pointer;
+}
 
 
 
@@ -517,8 +642,3 @@ body.loadingTracks #loadTracks {
 		background-color:#fff;
 
 		}}
-
-
-	}
-
-
