--- a/public/jqueryui.css
+++ b/public/jqueryui.css
@@ -569,27 +569,27 @@ button.ui-button::-moz-focus-inner {
     top: 0;
 }
 .ui-tabs {
-    padding: 0.2em;
-    position: relative;
+/*    padding: 0.2em;
+*/    position: relative;
 }
 .ui-tabs .ui-tabs-nav {
     margin: 0;
-    padding: 0.2em 0.2em 0;
-}
+/*    padding: 0.2em 0.2em 0;
+*/}
 .ui-tabs .ui-tabs-nav li {
     border-bottom: 0 none !important;
     float: left;
     list-style: none outside none;
-    margin: 0 0.2em 1px 0;
-    padding: 0;
+/*    margin: 0 0.2em 1px 0;
+*/    padding: 0;
     position: relative;
-    top: 1px;
-    white-space: nowrap;
+/*    top: 1px;
+*/    white-space: nowrap;
 }
 .ui-tabs .ui-tabs-nav li a {
     float: left;
-    padding: 0.5em 1em;
-    text-decoration: none;
+/*    padding: 0.5em 1em;
+*/    text-decoration: none;
 }
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected {
     margin-bottom: 0;
@@ -605,8 +605,8 @@ button.ui-button::-moz-focus-inner {
     background: none repeat scroll 0 0 transparent;
     border-width: 0;
     display: block;
-    padding: 1em 1.4em;
-}
+/*    padding: 1em 1.4em;
+*/}
 .ui-tabs .ui-tabs-hide {
     display: none !important;
 }
