--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
   <%= javascript_include_tag "application" %>
   <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
-  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+  <script>//document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://w.soundcloud.com/player/api.js"></script>
 <link rel="stylesheet" href="jquery.mCustomScrollbar.css" />
