commentage ajax error

--- a/app/views/pages/_tree.html.erb
+++ b/app/views/pages/_tree.html.erb
@@ -334,7 +334,7 @@ update(d);
 
 },
 error: function() {
-  alert("Ajax error!")
+  // alert("Ajax error!")
 }
 });
 }
@@ -389,7 +389,7 @@ $.ajax({
                               }
                             },
                             error: function() {
-                              alert("Ajax error!")
+                              // alert("Ajax error!")
                             }
                           }); 
 
@@ -446,7 +446,7 @@ $.ajax({
 
                             },
                             error: function() {
-                              alert("Ajax error!")
+                              // alert("Ajax error!")
                             }
                           }); 
 
