--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,6 @@
   <%= stylesheet_link_tag "application"%>
   <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
-  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://w.soundcloud.com/player/api.js"></script>
 <link rel="stylesheet" href="jquery.mCustomScrollbar.css" />
@@ -32,7 +31,7 @@
   <div id="Search">
 <div id="loadSearch"></div>
 
-    <input type="text" class="form-control"  placeholder="Chercher artiste" name="username" id="search-text">
+    <input type="text" class="form-control"  placeholder="Chercher un artiste" name="username" id="search-text">
     <button id="buttonMoi">Moi</button>
     <ul data-role="listview"  id="search-result" data-theme="a"></ul>
   </div>
