--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,15 +1,14 @@
 body{
 		    overflow:hidden;
+		    position:relative;
 }
 
- #header{
+ #header-application{
  	width: 100%;
  	height: 4%;
- }
-#header_application{
-	  top: 0px;
 
-}
+ }
+
 #div_notifications{
 	width: 100%;
 	height: 100%;
@@ -25,7 +24,7 @@ body{
 .contentApplication{
 
 	width:100%;
-	height:100%;
+	height:96%;
 	position: relative;
 }
 
