correctif notification, gestion lien utilisateur ajout ami

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,10 +3,9 @@ body{
 		    position:relative;
 }
 
- #header-application{
- 	width: 100%;
- 	height: 4%;
-
+ #header_application{
+ 	position:relative;
+ 	margin-bottom:0px;
  }
 
 #div_notifications{
