amélioration présentation amis

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -415,6 +415,9 @@ body.loadingTracks #loadTracks {
 	border-color: #EAEAEA;
 }
 .previewFriend{
+	background-repeat:no-repeat;
+	background-position:center center;
+
 	width: 100%;
 	height: 100%;
 }
